<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.bd.google</groupId>
	<artifactId>google-protobuff</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<properties>

		<gateway.version>1.0.2-SNAPSHOT</gateway.version>
		<java.version>1.7</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<protobuf-java.version>2.5.0</protobuf-java.version>

		<cobertura-maven-plugin.version>2.5.2</cobertura-maven-plugin.version>
		<log4j.version>1.2.17</log4j.version>
		<slf4j.version>1.7.5</slf4j.version>

		<junit.version>4.11</junit.version>
		<easymock.version>3.1</easymock.version>
		<mockito.version>1.9.5-rc1</mockito.version>

		<findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>

		<coverage.target.percentage>0</coverage.target.percentage>
		<coverage.target.line.percentage>0</coverage.target.line.percentage>
		<coverage.target.branch.percentage>0</coverage.target.branch.percentage>


		<!-- <spring.version>3.2.3.RELEASE</spring.version> <oauth.signpost.version>1.2.1.2</oauth.signpost.version> 
			<guava.version>14.0.1</guava.version> <joda.version>2.2</joda.version> <google.gson.version>2.2.4</google.gson.version> 
			<jackson.version>2.2.1</jackson.version> <httpcore.version>4.2.4</httpcore.version> 
			<httpclient.version>4.2.5</httpclient.version> <commons-lang3.version>3.1</commons-lang3.version> 
			<commons-collections.version>3.2.1</commons-collections.version> <commons-io.version>2.4</commons-io.version> 
			<logback.version>1.0.13</logback.version> <powermock.version>1.5</powermock.version> 
			<akka.version>2.0.2</akka.version> <oswego.version>1.3.4</oswego.version> 
			<findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version> <maven-project-info-reports-plugin.version>2.5.1</maven-project-info-reports-plugin.version> -->

	</properties>


	<dependencies>

		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>${protobuf-java.version}</version>
		</dependency>


		<!-- logging dependencies -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>



		<!-- Unit testing dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>${easymock.version}</version>
		</dependency>


	</dependencies>


	<profiles>
		<!-- Assembly profile -->
		<profile>
			<id>assemble</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>2.4</version>
						<configuration>
							<archive>
								<manifestEntries>
									<Class-Path>.</Class-Path>
								</manifestEntries>
							</archive>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<descriptors>
										<descriptor>src/assembly/distribution.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>

				<resources>
					<resource>
						<filtering>true</filtering>
						<directory>src/main/resources</directory>
					</resource>
				</resources>
			</build>
		</profile>
	</profiles>

	<build>
		<finalName>google-protobuff</finalName>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14.1</version>
				<configuration>
					<skipTests>false</skipTests>
					<systemProperties>
						<property>
							<name>net.sourceforge.cobertura.datafile</name>
							<value>target/cobertura/cobertura.ser</value>
						</property>
					</systemProperties>
					<forkMode>pertest</forkMode>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${cobertura-maven-plugin.version}</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check>
						<branchRate>${coverage.target.percentage}</branchRate>
						<lineRate>${coverage.target.percentage}</lineRate>
						<haltOnFailure>true</haltOnFailure>
						<totalBranchRate>${coverage.target.branch.percentage}</totalBranchRate>
						<totalLineRate>${coverage.target.line.percentage}</totalLineRate>
						<packageLineRate>${coverage.target.percentage}</packageLineRate>
						<packageBranchRate>${coverage.target.percentage}</packageBranchRate>
					</check>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>clean</goal>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>

		</plugins>


	</build>

</project>
